--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "next": "16.1.1",
     "prismjs": "^1.30.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@types/node": "^20",
